2010-07-07  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: skip breakpoints when script is already paused
        https://bugs.webkit.org/show_bug.cgi?id=41768

        * inspector/debugger-no-nested-pause-expected.txt: Added.
        * inspector/debugger-no-nested-pause.html: Added.

2010-07-08  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: factor out common part of debugger tests. Also explicitely disable debugger when test is complete.
        https://bugs.webkit.org/show_bug.cgi?id=41836

        * http/tests/inspector/debugger-test.js: Added.
        (frontend_ensureDebuggerEnabled):
        (frontend_ensureDebuggerDisabled):
        (frontend_completeDebuggerTest):
        * http/tests/inspector/inspector-test.js:
        (completeTest):
        * inspector/debugger-pause-in-eval-script-expected.txt:
        * inspector/debugger-pause-in-eval-script.html:
        * inspector/debugger-pause-on-debugger-statement-expected.txt:
        * inspector/debugger-pause-on-debugger-statement.html:
        * inspector/debugger-proto-property-expected.txt:
        * inspector/debugger-proto-property.html:

2010-07-07  Nicolas Weber  <thakis@chromium.org>

        Reviewed by Dimitri Glazkov.
        https://bugs.webkit.org/show_bug.cgi?id=41580

        Fix rendering of radial gradients in skia if both points of the
        gradient are the same and r0 > 0.

        * fast/gradients/radial-centered.html: Added.

2010-06-18  MORITA Hajime  <morrita@google.com>

        Reviewed by Ojan Vafai.

        https://bugs.webkit.org/show_bug.cgi?id=26526
        Add support for input events (oninput) to contentEditable elements

        * fast/events/event-input-contentEditable-expected.txt: Added.
        * fast/events/event-input-contentEditable.html: Added.
        * fast/events/script-tests/event-input-contentEditable.js: Added.
