@@ -1,3 +1,14 @@
+2010-07-08  Yury Semikhatsky  <yurys@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
+        Web Inspector: add layout test for console evaluations with paused script
+        https://bugs.webkit.org/show_bug.cgi?id=41336
+
+        * inspector/debugger-eval-while-paused-expected.txt: Added.
+        * inspector/debugger-eval-while-paused.html: Added.
+        * platform/qt/Skipped:
+
 2010-07-07  Yury Semikhatsky  <yurys@chromium.org>
 
         Reviewed by Pavel Feldman.
